--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,6 @@ testcontainersBom=1.19.7
 protobufBom=3.24.4
 guava=33.1.0-jre
 reflections=0.10.2
-
+grpc=1.64.0
+errorProneAnnotations=2.11.0
+tomcatAnnotationsApi=6.0.53
