--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,10 @@ reflections=0.10.2
 grpc=1.64.0
 errorProneAnnotations=2.11.0
 tomcatAnnotationsApi=6.0.53
+sockjs=1.5.1
+stomp=2.3.4
+bootstrap=5.3.3
+springDocOpenapiUi=2.8.5
+wiremock=3.0.1
+r2dbcPostgresql=0.8.13.RELEASE
+jsr305=3.0.2
